--- a/_config.yml
+++ b/_config.yml
@@ -123,3 +123,5 @@ social_icons:
 _comments:
   description: Text shown when sharing on social media
   blurb: Short bio or description of this person
+
+theme: jekyll-theme-cayman
