--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@
   link: /story/
 - name: Steering
   link: /steering/
-- name: Blog
-  link: /blog/
-- name: Contact
-  link: /contact/
+# - name: Blog
+#   link: /blog/
+# - name: Contact
+#   link: /contact/
