--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # ----
 # Site
 
-title: DSB - Frisco Template
+title: DSB workshop
 url: "https://dsb-meeting.github.io"
 baseurl: ""
 google_analytics_key:
