updating for the 2022 conference in Dusseldorf, also updated DSB2021.md because for a new line inside a paragraph it is recommended to use two spaces instead of the slash and the slash was causing trouble

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,5 @@
-- name: DSB2021
-  link: /DSB2021/
+- name: DSB2022
+  link: /DSB2022/
 - name: Spirit
   link: /spirit/
 - name: Story
@@ -8,5 +8,5 @@
   link: /steering/
 # - name: Blog
 #   link: /blog/
-# - name: Contact
-#   link: /contact/
+- name: Contact
+  link: /contact/
